Incorrect P5 syntax spotted by scw++.
git-svn-id: http://svn.pugscode.org/pugs@23487 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -634,7 +634,7 @@ assertion (i.e. a subrule or a named character class - see below):
 The special named assertions include:
 
      / <before pattern> /    # was /(?=pattern)/
-     / <after pattern> /     # was /(?<pattern)/
+     / <after pattern> /     # was /(?<=pattern)/
 
      / <sp> /                # match the SPACE character (U+0020)
      / <ws> /                # match "whitespace":
